--- a/caratula.sty
+++ b/caratula.sty
@@ -229,7 +229,7 @@
     \ifsetuperror\errmessage{Faltan datos de la caratula! Ingresar 'h' para mas informacion.}\fi
     \thispagestyle{empty}
     \begin{center}
-    \ifx\Logoimagefile\relax\else\includegraphics{\Logoimagefile}\fi \hfill \includegraphics{logo_dc.jpg}\\[1em]
+    \ifx\Logoimagefile\relax\else\includegraphics{\Logoimagefile}\fi \hfill \includegraphics{logo_lcc.jpg}\\[1em]
     \vspace*{\stretch{2}}
     {\LARGE\textbf{\Materia}}\\[1em]
     \ifx\Submateria\relax\else{\Large \Submateria}\\[0.5em]\fi
@@ -255,7 +255,7 @@
 %
     \thispagestyle{empty}
 
-    \ifx\Logoimagefile\relax\else\includegraphics{\Logoimagefile}\fi \hfill \includegraphics{logo_dc.jpg}
+    \ifx\Logoimagefile\relax\else\includegraphics{\Logoimagefile}\fi \hfill \includegraphics[scale=0.75]{logo_lcc.png}
 
     \vspace*{.06 \textheight}
 
@@ -281,17 +281,16 @@
 %
     \begin{minipage}[t]{\textwidth}
         \begin{minipage}[t]{.55 \textwidth}
-            \includegraphics{logo_uba.jpg}
+            \includegraphics[scale=1.5]{logo_unr.jpg}
         \end{minipage}%%
         \begin{minipage}[b]{.50 \textwidth}
-            \textbf{\textsf{Facultad de Ciencias Exactas y Naturales}} \\
-            \textsf{Universidad de Buenos Aires} \\
+            \textbf{\textsf{Facultad de Ciencias Exactas, Ingenier\'ia y Agrimensura}} \\
+            \textsf{Universidad de Rosario} \\
             {\scriptsize %
-            Ciudad Universitaria - (Pabell\'on I/Planta Baja) \\
-                Intendente G\"uiraldes 2160 - C1428EGA \\
-            Ciudad Aut\'onoma de Buenos Aires - Rep. Argentina \\
-                Tel/Fax: (++54 +11) 4576-3300 \\
-            http://www.exactas.uba.ar \\
+            Av. Pellegrini 250 - Planta Baja - (S2000BTP) \\
+            Rosario - Rep. Argentina. \\
+            Tel\'efono: +54 - 341 - 4802649/52 - interno 112 \\
+			http://www.fceia.unr.edu.ar \\
             }
         \end{minipage}
     \end{minipage}%
