tesis: Move summary to Ariel-specific content
Signed-off-by: Ariel D'Alessandro <ariel@vanguardiasur.com.ar>

--- a/tesis.lyx
+++ b/tesis.lyx
@@ -116,14 +116,15 @@ status open
 
 
 \backslash
-integrante{Gastón Ignacio Castro}{}{gcastro@dc.uba.ar}
+integrante{Ariel Roberto D'Alessandro}{}{ariel.dalessandro@gmail.com}
 \end_layout
 
 \begin_layout Plain Layout
 
 
 \backslash
-titulo{Detección y cierre de ciclos en sistemas SLAM basados en visión estéreo}
+titulo{Mapeo denso en tiempo real sobre sistemas SLAM basados en visión
+ estéreo}
 \end_layout
 
 \begin_layout Plain Layout
@@ -153,7 +154,7 @@ director{Pire, Taihú}{tpire@dc.uba.ar}
 
 
 \backslash
-codirector{Pablo, De Cristóforis}{pdecris@dc.uba.ar}
+codirector{Baravalle, Rodrigo}{baravalle@cifasis-conicet.gov.ar}
 \end_layout
 
 \begin_layout Plain Layout
@@ -183,73 +184,74 @@ maketitle
 \end_layout
 
 \begin_layout Section*
-Detección y cierre de ciclos en sistemas SLAM basados en visión estéreo
+Mapeo denso en tiempo real sobre sistemas SLAM basados en visión estéreo
 \end_layout
 
 \begin_layout Standard
-Las aplicaciones relativas a robots autónomos móviles requieren la construcción
- de una representación o mapa del entorno y la localización fiable del robot
- en el mismo.
- En SLAM (
-\emph on
-Simultaneous Localization And Mapping
-\emph default
-) se plantea abordar ambos problemas de manera simultánea.
- Los métodos que resuelven SLAM deben tratar con la acumulación del error
- en la estimación de la posición y orientación del robot, que va creciendo
- de forma no acotada a medida que aumenta la longitud de la trayectoria
- recorrida y la dimensión del mapa construido.
- Para abordar este problema los métodos de SLAM deben contar con la capacidad
- de detectar una región previamente visitada por el robot y ajustar tanto,
- la localización del robot como el mapa construido minimizando el error
- acumulado hasta el momento.
- Este problema se conoce como 
-\emph on
-Loop Closure
-\emph default
-, que incluye la detección y cierre de ciclos en la trayectoria realizada
- por el robot.
+Uno de los principales problemas presentes en aplicaciones relativas a robots
+ autónomos móviles consiste en el planeamiento de una trayectoria segura
+ hacia un objetivo (u objetivos) que el robot debe alcanzar.
+ Para esto, resulta necesario contar con una representación del ambiente
+ que se está transitando (mapa) a medida que el robot se desplaza.
 \end_layout
 
 \begin_layout Standard
-El presente trabajo propone una solución al problema de la detección y cierre
- de ciclos en sistemas de SLAM que utilizan cámaras estéreo como sensor
- principal.
- Para lograr este objetivo, se divide el problema en tres etapas: la detección
- de ciclos en la trayectoria, el cálculo del desvío cometido en la localización
- y la corrección tanto de la localización actual del robot como del mapa
- construido hasta el momento.
- Por cada etapa se lleva a cabo una profunda revisión del estado del arte,
- exponiendo aquellos métodos y técnicas que motivaron la solución propuesta
- en este trabajo.
+Dentro de este requerimiento pueden distinguirse dos cuestiones a resolver:
+\end_layout
+
+\begin_layout Enumerate
+El mapa debe ser extendido y actualizado en tiempo real para que el robot
+ pueda refinar su trayectoria a medida que explora el ambiente.
+\end_layout
+
+\begin_layout Enumerate
+El mapa debe ser suficientemente detallado (denso) para que el robot pueda
+ realizar un planeamiento seguro, evitando posibles obstáculos.
 \end_layout
 
 \begin_layout Standard
-Para realizar la detección de ciclos se entrena un vocabulario visual en
- una etapa previa, de manera de obtener una discretización del espacio de
- descriptores de las imágenes capturadas por la cámara.
- Este vocabulario visual se utiliza luego para obtener una representación
- eficiente de las imágenes (
+El primer problema es conocido como
 \emph on
-bag-of-words
+ SLAM 
 \emph default
-) que permite evaluar la similitud entre las imágenes obtenidas en un determinad
-o momento y las que componen el mapa construido.
- A través de la comparación de vectores 
-\emph on
-bag-of-words
-\emph default
- asociados a cada imagen se hallan candidatos a ciclos que se validan utilizando
- técnicas geométricas para establecer la consistencia espacial entre los
- distintos momentos de la trayectoria.
- Por último, se efectúan los cierres de ciclo y corrección del mapa por
- medio de técnicas de optimización de grafos y algoritmos de minimización
- no lineal.
+(Simultaneous Localization And Mapping).
+ Dentro del estado del arte actual pueden encontrarse diversas soluciones
+ propuestas, e.g.
+ S-PTAM, que estiman una localización fiable del robot aunque el mapa generado
+ es esparso, resultando no apto para planificación de trayectorias y detección
+ de obstáculos.
 \end_layout
 
 \begin_layout Standard
-La solución propuesta se implementó como un módulo para ser incorporado
- al sistema S-PTAM (
+El presente trabajo aborda el problema de reconstrucción densa en sistemas
+ de SLAM que utilizan cámaras estéreo como sensor principal.
+ La solución propuesta puede dividirse en dos etapas capaces de ser ejecutadas
+ en paralelo: generación y reproyección 3D de mapas de disparidad; transformació
+n y fusión global de nube de puntos.
+\end_layout
+
+\begin_layout Standard
+Para generar los mapas de disparidad se utiliza la librería de código abierto
+ LIBELAS, disponible públicamente, que provee un método eficiente con interpolac
+ión de áreas de bajo gradiente.
+ Estos mapas de disparidad son reproyectados para obtener una nube de puntos
+ 3D local.
+\end_layout
+
+\begin_layout Standard
+Utilizando la pose estimada por el sistema SLAM, la nube de puntos es transforma
+da y continuamente refinada sobre el sistema de coordenadas global (mapa).
+ Previamente, haciendo uso de un mecanismo similar al propuesto en StereoScan,
+ se fusionan puntos redundantes y descartan outliers para reducir la complejidad
+ de la nube de puntos y afinar la representación del entorno.
+\end_layout
+
+\begin_layout Standard
+La solución propuesta se implementó como un nodo del framework ROS (
+\emph on
+Robot Operating System
+\emph default
+) para ser ejecutado en paralelo y conjuntamente con el sistema S-PTAM (
 \emph on
 Stereo Parallel Tracking And Mapping
 \emph default
@@ -258,14 +260,9 @@ Stereo Parallel Tracking And Mapping
 \emph on
 datasets
 \emph default
- de dominio público bajo el framework ROS (
-\emph on
-Robot Operating System
-\emph default
-) muestran que la detección y cierre de ciclos mejoran drásticamente la
- estimación de la localización del robot en el entorno y la calidad del
- mapa construido, permitiendo al mismo tiempo la ejecución del sistema en
- tiempo real.
+ de dominio público muestran que el sistema es apto para generar en tiempo
+ real un mapeo denso, en entornos de grandes dimensiones, sin requerir el
+ uso de GPUs.
 \end_layout
 
 \begin_layout Standard
@@ -276,93 +273,7 @@ Robot Operating System
 \end_layout
 
 \begin_layout Section*
-Loop detection and closure on stereo-vision based SLAM systems
-\end_layout
-
-\begin_layout Standard
-
-\lang english
-Applications concerning mobile autonomous robots requires building a representat
-ion or map of the environment, and the accurate localization of the robot
- in it.
- SLAM (
-\emph on
-Simultaneous Localization and Mapping
-\emph default
-) proposes to address both problems simultaneously.
- The methods that solve SLAM must deal with error accumulation on the estimation
- of position and orientation, which grows unbounded as it increases the
- length of the path traveled and the size of the map constructed.
- To address this issue, SLAM methods must be able to detect a region previously
- visited by the robot and adjust both, the robot's localization and the
- map built minimizing the accumulated error up to that moment.
- This problem is known as 
-\emph on
-Loop Closure
-\emph default
-, including the detection and closure of loops in the trajectory carried
- out by the robot.
- 
-\end_layout
-
-\begin_layout Standard
-
-\lang english
-This work proposes a solution to the problem of detecting and closing loops
- in SLAM systems that use stereo cameras as the main sensor.
- To achieve this objective, the problem is divided into three stages: detection
- of loops in the trajectory, calculation of the deviation occurred in the
- localization and correction of both, current robot’s localization and the
- map built up to that moment.
- For each stage a thorough review of the state of the art is carried out,
- exposing those methods and techniques that led to the solution proposed
- in this work.
-\end_layout
-
-\begin_layout Standard
-
-\lang english
-To perform the loop detection a visual vocabulary is trained in a previous
- stage in order to obtain a discretization of the descriptor space of images
- captured by the camera.
- This visual vocabulary is then used to obtain an efficient representation
- of images (
-\emph on
-bag-of-words
-\emph default
-) that allows the similarity evaluation of images obtained at a given time
- and those composing the map built.
- Loop candidates are formulated through the comparison of the 
-\emph on
-bag-of-words
-\emph default
- vectors associated to each image, these candidates are then validated using
- geometric vision techniques for the establishment of the spatial consistency
- between the different moments of the trajectory.
- Finally, loop closing and map correction is performed using graph optimization
- techniques and nonlinear minimization algorithms.
-\end_layout
-
-\begin_layout Standard
-
-\lang english
-The proposed solution is implemented as a module to be incorporated into
- the S-PTAM (
-\emph on
-Stereo Parallel Tracking And Mapping
-\emph default
-) open source system.
- Experiments performed with public domain 
-\emph on
-datasets
-\emph default
- under the ROS (
-\emph on
-Robot Operating System
-\emph default
-) framework, show that detection and closure of loops dramatically improve
- the estimation of the robot localization on the environment and quality
- of the map built, while allowing system execution in real time.
+TODO: translate intro
 \end_layout
 
 \begin_layout Standard
