Add Ariel-specific bibliography
Signed-off-by: Ariel D'Alessandro <ariel@vanguardiasur.com.ar>

--- a/all.bib
+++ b/all.bib
@@ -894,3 +894,199 @@ month={Sept},}
   year      = {2009},
   pages     = {331-340}
 }
+
+@inproceedings{newcombe2011dtam,
+  title={DTAM: Dense tracking and mapping in real-time},
+  author={Newcombe, Richard A and Lovegrove, Steven J and Davison, Andrew J},
+  booktitle={2011 international conference on computer vision},
+  pages={2320--2327},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{pizzoli2014remode,
+  title={REMODE: Probabilistic, monocular dense reconstruction in real time},
+  author={Pizzoli, Matia and Forster, Christian and Scaramuzza, Davide},
+  booktitle={2014 IEEE International Conference on Robotics and Automation (ICRA)},
+  pages={2609--2616},
+  year={2014},
+  organization={IEEE}
+}
+
+@inproceedings{engel2014lsd,
+  title={LSD-SLAM: Large-scale direct monocular SLAM},
+  author={Engel, Jakob and Sch{\"o}ps, Thomas and Cremers, Daniel},
+  booktitle={European Conference on Computer Vision},
+  pages={834--849},
+  year={2014},
+  organization={Springer}
+}
+
+@inproceedings{geiger2011stereoscan,
+  title={Stereoscan: Dense 3d reconstruction in real-time},
+  author={Geiger, Andreas and Ziegler, Julius and Stiller, Christoph},
+  booktitle={Intelligent Vehicles Symposium (IV), 2011 IEEE},
+  pages={963--968},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{argiles2011dense,
+  title={Dense multi-planar scene estimation from a sparse set of images},
+  author={Argiles, Alberto and Civera, Javier and Montesano, Luis},
+  booktitle={2011 IEEE/RSJ International Conference on Intelligent Robots and Systems},
+  pages={4448--4454},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{concha2014using,
+  title={Using superpixels in monocular SLAM},
+  author={Concha, Alejo and Civera, Javier},
+  booktitle={2014 IEEE International Conference on Robotics and Automation (ICRA)},
+  pages={365--372},
+  year={2014},
+  organization={IEEE}
+}
+
+@inproceedings{concha2015dpptam,
+  title={DPPTAM: Dense piecewise planar tracking and mapping from a monocular sequence},
+  author={Concha, Alejo and Civera, Javier},
+  booktitle={Intelligent Robots and Systems (IROS), 2015 IEEE/RSJ International Conference on},
+  pages={5686--5693},
+  year={2015},
+  organization={IEEE}
+}
+
+@inproceedings{pire2015stereo,
+  title={Stereo parallel tracking and mapping for robot localization},
+  author={Pire, Taih{\'u} and Fischer, Thomas and Civera, Javier and De Crist{\'o}foris, Pablo and Berlles, Julio Jacobo},
+  booktitle={Intelligent Robots and Systems (IROS), 2015 IEEE/RSJ International Conference on},
+  pages={1373--1378},
+  year={2015},
+  organization={IEEE}
+}
+
+@inproceedings{quigley2009ros,
+  title={ROS: an open-source Robot Operating System},
+  author={Quigley, Morgan and Conley, Ken and Gerkey, Brian and Faust, Josh and Foote, Tully and Leibs, Jeremy and Wheeler, Rob and Ng, Andrew Y},
+  booktitle={ICRA workshop on open source software},
+  volume={3},
+  number={3.2},
+  pages={5},
+  year={2009},
+  organization={Kobe, Japan}
+}
+
+@article{bradski2000opencv,
+  title={The opencv library},
+  author={Bradski, Gary and others},
+  journal={Doctor Dobbs Journal},
+  volume={25},
+  number={11},
+  pages={120--126},
+  year={2000},
+  publisher={M AND T PUBLISHING INC}
+}
+
+@article{durrant2006simultaneous,
+  title={Simultaneous localization and mapping: part I},
+  author={Durrant-Whyte, Hugh and Bailey, Tim},
+  journal={IEEE robotics \& automation magazine},
+  volume={13},
+  number={2},
+  pages={99--110},
+  year={2006},
+  publisher={IEEE}
+}
+
+@article{bailey2006simultaneous,
+  title={Simultaneous localization and mapping (SLAM): Part II},
+  author={Bailey, Tim and Durrant-Whyte, Hugh},
+  journal={IEEE Robotics \& Automation Magazine},
+  volume={13},
+  number={3},
+  pages={108--117},
+  year={2006}
+}
+
+@inproceedings{klein2007parallel,
+  title={Parallel tracking and mapping for small AR workspaces},
+  author={Klein, Georg and Murray, David},
+  booktitle={Mixed and Augmented Reality, 2007. ISMAR 2007. 6th IEEE and ACM International Symposium on},
+  pages={225--234},
+  year={2007},
+  organization={IEEE}
+}
+
+@article{borenstein1991vector,
+  title={The vector field histogram-fast obstacle avoidance for mobile robots},
+  author={Borenstein, Johann and Koren, Yoram},
+  journal={IEEE Transactions on Robotics and Automation},
+  volume={7},
+  number={3},
+  pages={278--288},
+  year={1991},
+  publisher={IEEE}
+}
+
+@inproceedings{ulrich1998vfh+,
+  title={VFH+: Reliable obstacle avoidance for fast mobile robots},
+  author={Ulrich, Iwan and Borenstein, Johann},
+  booktitle={Robotics and Automation, 1998. Proceedings. 1998 IEEE International Conference on},
+  volume={2},
+  pages={1572--1577},
+  year={1998},
+  organization={IEEE}
+}
+
+@article{lavalle1998rapidly,
+  title={Rapidly-exploring random trees: A new tool for path planning},
+  author={LaValle, Steven M},
+  year={1998},
+  publisher={Citeseer}
+}
+
+@article{kala2013rapidly,
+  title={Rapidly exploring random graphs: motion planning of multiple mobile robots},
+  author={Kala, Rahul},
+  journal={Advanced Robotics},
+  volume={27},
+  number={14},
+  pages={1113--1122},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+
+@article{kavraki1996probabilistic,
+  title={Probabilistic roadmaps for path planning in high-dimensional configuration spaces},
+  author={Kavraki, Lydia E and Svestka, Petr and Latombe, J-C and Overmars, Mark H},
+  journal={IEEE transactions on Robotics and Automation},
+  volume={12},
+  number={4},
+  pages={566--580},
+  year={1996},
+  publisher={IEEE}
+}
+
+@article{khatib1986real,
+  title={Real-time obstacle avoidance for manipulators and mobile robots},
+  author={Khatib, Oussama},
+  journal={The international journal of robotics research},
+  volume={5},
+  number={1},
+  pages={90--98},
+  year={1986},
+  publisher={Sage Publications}
+}
+
+@article{lozano1979algorithm,
+  title={An algorithm for planning collision-free paths among polyhedral obstacles},
+  author={Lozano-P{\'e}rez, Tom{\'a}s and Wesley, Michael A},
+  journal={Communications of the ACM},
+  volume={22},
+  number={10},
+  pages={560--570},
+  year={1979},
+  publisher={ACM}
+}
