solucion: metodo propuesto: Fill OpenCV disparity subsection
Signed-off-by: Ariel D'Alessandro <ariel@vanguardiasur.com.ar>

--- a/all.bib
+++ b/all.bib
@@ -1090,3 +1090,23 @@ month={Sept},}
   year={1979},
   publisher={ACM}
 }
+
+@incollection{konolige1998small,
+  title={Small vision systems: Hardware and implementation},
+  author={Konolige, Kurt},
+  booktitle={Robotics research},
+  pages={203--212},
+  year={1998},
+  publisher={Springer}
+}
+
+@article{hirschmuller2008stereo,
+  title={Stereo processing by semiglobal matching and mutual information},
+  author={Hirschmuller, Heiko},
+  journal={IEEE Transactions on pattern analysis and machine intelligence},
+  volume={30},
+  number={2},
+  pages={328--341},
+  year={2008},
+  publisher={IEEE}
+}
